# bank_operations_skypro

./: .flake8  README.md  main.py  pyproject.toml
data_test/: test.xlsx
src/: utils.py  views.py
tests/: test_util.py  test_views.py
